<resources>
    <string name="app_name"> bannerchi </string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save the image for sharing.</string>
    <string name="msg_share_image">Share Image</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="shape">Shape</string>
    <string name="close">Close</string>
    <string name="RSAKey">MIHNMA0GCSqGSIb3DQEBAQUAA4G7ADCBtwKBrwDJYQVlmFb27fDWdlBa7MFycAsLuGh0ddMmx5iWYQs9gfOfvSyLuquJpnlKp/uSykHuqU2MNlBU8eBBV/S1e2mrEBoAlUySTXpBPfQiGfvcH0cpJaPrPdBNdteelUSZa8RCc7DjMdmBhDfcvMzQHDxn/VvHuW/sirh9/LkEQ58Tr0D02Hx5/6l9hTguWzntLKkUaapaAn1IKluSJi/lSZa4vVLqTOxFDIH5zPMpwu0CAwEAAQ==</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="rotation">Rotation</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <string name="userName">User name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="send">send</string>
    <string name="otp">Enter the received code.</string>
    <string name="typeOfPage">Page type (Business/Personal)</string>
    <string name="jobTitle">Job title</string>
    <string name="page_type">Page type</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="rate_limit">Please try after one minute</string>
    <string name="Registration_successful">Registration successful</string>
    <string name="Login_successful">Login successful</string>
    <string-array name="page_types">
        <item>Personal</item>
        <item>Business</item>
    </string-array>
    <string name="guest">Guest use</string>
    <string name="empty">----</string>
    <string name="about_application_title">About Application</string>
    <string name="about_application_text">All my colleagues efforts in this application have been aimed at providing you with a collection of the best and most beautiful posters, either for free or at a nominal cost.\n These designs and posters have been prepared and presented by experienced design professionals in our country, adhering to the most meticulous design techniques. This alone is enough to significantly enhance the beauty of your page in a completely tangible way.\n In the end, we hope that by purchasing these beautiful packages, you will support us in continuing this path and providing better products.</string>
    <string name="email_address" translatable="false">banerchi@devejumpgroup.ir</string>
    <string name="telegram_address" translatable="false">https://t.me/saeeddevejump</string>
    <string name="done_button">Done</string>
    <string name="enter_text">Enter your text</string>
    <string name="label_color">color</string>
    <string name="label_fontF">Persian font</string>
    <string name="label_fontE">English font</string>
    <string name="poster_name">Poster name</string>
    <string name="poster_name_hint"> mohammad Saleh Ahmadi</string>
    <string name="price_hint">10000 T</string>
    <string name="download_count_hint">تا کنون 152 نفر این محصول را دانلود کرده اند.</string>
    <string name="download_package">Download package</string>
    <string name="buySubscribe">Purchase subscription</string>
    <string name="threeMonth">Three-month subscription</string>
    <string name="sixMonth">Six-month subscription</string>
    <string name="oneYear">One-year subscription</string>
    <string name="subscription_status">Subscription Status</string>
    <string name="subscribtion_name">Subscription name</string>
    <string name="left_time">Remaining subscription time</string>
    <string name="label_downloaded">Downloaded</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_home">Home</string>
    <string name="label_about_us">About Us</string>
    <string name="label_profile">Profile</string>
</resources>