<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/downloads"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/label_downloaded" />
    <item android:id="@+id/favorits"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/label_favorites" />
    <item android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/label_home" />
    <item android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/label_about_us" />
    <item android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/label_profile" />
</menu>