<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_bg"
    android:layout_height="wrap_content">
<com.google.android.material.textview.MaterialTextView
    android:id="@+id/title"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="10dp"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:text="@string/buySubscribe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/btnThreeMonthBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threeMonth"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="25dp" />
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/btnThreeMonthBuy"
        android:id="@+id/btnSixMonthBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sixMonth"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="25dp" />
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/btnSixMonthBuy"
        android:id="@+id/btnOneYearBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/oneYear"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>