<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <ImageView
            android:id="@+id/imgBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_bookmark_border_24" />

        <TextView

            android:id="@+id/txtPackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/poster_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtDesigner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPackName"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/poster_name_hint"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDesigner"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/price_hint"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPrice"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/download_count_hint"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />
        <ProgressBar
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:id="@+id/prgDownLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCountDown"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCountDown"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/download_package"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="25dp" />

    </RelativeLayout>
</RelativeLayout>