<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">

    <TextView
        android:layout_margin="5dp"
        android:id="@+id/add_text_done_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_border_text_view"
        android:padding="10dp"
        android:text="@string/done_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:hint="@string/enter_text"
        android:textColorHint="#CBACABAB"
        android:focusedByDefault="true"
        android:focusable="true"
        android:id="@+id/add_text_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:colorControlActivated="#FFFFFF"
        android:colorControlNormal="#FFFFFF"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:textColorPrimary="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/add_text_color_picker_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_text_done_tv"
        tools:visibility="visible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_text_color_picker_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rl"
        app:layout_constraintBottom_toBottomOf="@id/add_text_edit_text"
        tools:background="@android:color/black"
        tools:layout_height="wrap_content"
        tools:listitem="@layout/font_picker" />
  <RelativeLayout
      android:background="@color/tool_bg"
      android:id="@+id/rl"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_width="match_parent"
      android:layout_height="90dp">
      <RelativeLayout
          android:id="@+id/relSelectFontE"
          android:padding="5dp"
          android:layout_alignParentEnd="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true">

          <com.google.android.material.imageview.ShapeableImageView
              android:id="@+id/imgFontE"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:layout_centerHorizontal="true"
              android:layout_marginEnd="10dp"
              android:layout_marginRight="10dp"
              android:src="@drawable/ic_baseline_font_download_24" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="5dp"
              android:text="@string/label_fontE"
              android:textColor="@color/white"
              android:textSize="15sp"
              app:layout_constraintBottom_toBottomOf="@id/add_text_edit_text"
              tools:ignore="NotSibling" />
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/relSelectFontF"
          android:layout_marginEnd="10dp"
          android:padding="5dp"
          android:layout_toStartOf="@id/relSelectFontE"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toLeftOf="@id/relSelectFontE"
          android:layout_marginRight="10dp">

          <com.google.android.material.imageview.ShapeableImageView
              android:id="@+id/imgFontF"
              android:layout_width="41dp"
              android:layout_height="41dp"
              android:layout_centerHorizontal="true"
              android:layout_marginEnd="10dp"
              android:layout_marginRight="10dp"
              android:src="@drawable/farsi_icon" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="5dp"
              android:text="@string/label_fontF"
              android:textColor="@color/white"
              android:textSize="15sp"
              app:layout_constraintBottom_toBottomOf="@id/add_text_edit_text"
              tools:ignore="NotSibling" />
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/relSelectColor"
          android:layout_marginEnd="10dp"
          android:padding="5dp"
          android:layout_toStartOf="@id/relSelectFontF"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toLeftOf="@id/relSelectFontE"
          android:layout_marginRight="10dp">

          <com.google.android.material.imageview.ShapeableImageView
              android:id="@+id/imgColor"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:layout_centerHorizontal="true"
              android:layout_marginEnd="10dp"
              android:layout_marginRight="10dp"
              android:src="@drawable/ic_baseline_color_lens_24" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="5dp"
              android:text="@string/label_color"
              android:textColor="@color/white"
              android:textSize="15sp"
              app:layout_constraintBottom_toBottomOf="@id/add_text_edit_text"
              tools:ignore="NotSibling" />

      </RelativeLayout>


  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>